tex/y.output
Terminals which are not used

   CS


State 51 conflicts: 2 reduce/reduce


Grammar

    0 $accept: rails $end

    1 rails: rails rail
    2      | rail

    3 rail: RAILI raili
    4     | RAILP railp
    5     | RAILT railt
    6     | error

    7 @1: /* empty */

    8 railp: '{' @1 options '}'

    9 options: /* empty */
   10        | options '-'
   11        | options '+'
   12        | options IDENTIFIER

   13 railt: '{' IDENTIFIER '}'

   14 @2: /* empty */

   15 raili: '{' NUMBER '}' @2 '{' rules '}'

   16 rules: rules ';' rule
   17      | rules ';'
   18      | rule
   19      | error

   20 @3: /* empty */

   21 rule: IDENTIFIER ':' @3 body
   22     | body

   23 body: body0

   24 body0: body0 '|' ANNOT body1
   25      | body0 '|' body1
   26      | ANNOT body1
   27      | body1

   28 body1: body2 '*' body4e
   29      | body2 '+' body4e
   30      | body2e

   31 body2e: body2
   32       | empty

   33 body2: body2 body3
   34      | body3

   35 body3: body4 '?'
   36      | body4

   37 body4e: body4
   38       | empty

   39 body4: '(' body0 ')'
   40      | STRING annot
   41      | IDENTIFIER annot
   42      | RAILCR

   43 empty: /* empty */

   44 annot: ANNOT
   45      | /* empty */


Terminals, with rules where they appear

$end (0) 0
'(' (40) 39
')' (41) 39
'*' (42) 28
'+' (43) 11 29
'-' (45) 10
':' (58) 21
';' (59) 16 17
'?' (63) 35
'{' (123) 8 13 15
'|' (124) 24 25
'}' (125) 8 13 15
error (256) 6 19
IDENTIFIER (258) 12 13 21 41
NUMBER (259) 15
ANNOT (260) 24 26 44
RAILI (261) 3
RAILP (262) 4
RAILT (263) 5
RAILCR (264) 42
CS (265)
STRING (266) 40


Nonterminals, with rules where they appear

$accept (23)
    on left: 0
rails (24)
    on left: 1 2, on right: 0 1
rail (25)
    on left: 3 4 5 6, on right: 1 2
railp (26)
    on left: 8, on right: 4
@1 (27)
    on left: 7, on right: 8
options (28)
    on left: 9 10 11 12, on right: 8 10 11 12
railt (29)
    on left: 13, on right: 5
raili (30)
    on left: 15, on right: 3
@2 (31)
    on left: 14, on right: 15
rules (32)
    on left: 16 17 18 19, on right: 15 16 17
rule (33)
    on left: 21 22, on right: 16 18
@3 (34)
    on left: 20, on right: 21
body (35)
    on left: 23, on right: 21 22
body0 (36)
    on left: 24 25 26 27, on right: 23 24 25 39
body1 (37)
    on left: 28 29 30, on right: 24 25 26 27
body2e (38)
    on left: 31 32, on right: 30
body2 (39)
    on left: 33 34, on right: 28 29 31 33
body3 (40)
    on left: 35 36, on right: 33 34
body4e (41)
    on left: 37 38, on right: 28 29
body4 (42)
    on left: 39 40 41 42, on right: 35 36 37
empty (43)
    on left: 43, on right: 32 38
annot (44)
    on left: 44 45, on right: 40 41


state 0

    0 $accept: . rails $end

    error  shift, and go to state 1
    RAILI  shift, and go to state 2
    RAILP  shift, and go to state 3
    RAILT  shift, and go to state 4

    rails  go to state 5
    rail   go to state 6


state 1

    6 rail: error .

    $default  reduce using rule 6 (rail)


state 2

    3 rail: RAILI . raili

    '{'  shift, and go to state 7

    raili  go to state 8


state 3

    4 rail: RAILP . railp

    '{'  shift, and go to state 9

    railp  go to state 10


state 4

    5 rail: RAILT . railt

    '{'  shift, and go to state 11

    railt  go to state 12


state 5

    0 $accept: rails . $end
    1 rails: rails . rail

    $end   shift, and go to state 13
    error  shift, and go to state 1
    RAILI  shift, and go to state 2
    RAILP  shift, and go to state 3
    RAILT  shift, and go to state 4

    rail  go to state 14


state 6

    2 rails: rail .

    $default  reduce using rule 2 (rails)


state 7

   15 raili: '{' . NUMBER '}' @2 '{' rules '}'

    NUMBER  shift, and go to state 15


state 8

    3 rail: RAILI raili .

    $default  reduce using rule 3 (rail)


state 9

    8 railp: '{' . @1 options '}'

    $default  reduce using rule 7 (@1)

    @1  go to state 16


state 10

    4 rail: RAILP railp .

    $default  reduce using rule 4 (rail)


state 11

   13 railt: '{' . IDENTIFIER '}'

    IDENTIFIER  shift, and go to state 17


state 12

    5 rail: RAILT railt .

    $default  reduce using rule 5 (rail)


state 13

    0 $accept: rails $end .

    $default  accept


state 14

    1 rails: rails rail .

    $default  reduce using rule 1 (rails)


state 15

   15 raili: '{' NUMBER . '}' @2 '{' rules '}'

    '}'  shift, and go to state 18


state 16

    8 railp: '{' @1 . options '}'

    $default  reduce using rule 9 (options)

    options  go to state 19


state 17

   13 railt: '{' IDENTIFIER . '}'

    '}'  shift, and go to state 20


state 18

   15 raili: '{' NUMBER '}' . @2 '{' rules '}'

    $default  reduce using rule 14 (@2)

    @2  go to state 21


state 19

    8 railp: '{' @1 options . '}'
   10 options: options . '-'
   11        | options . '+'
   12        | options . IDENTIFIER

    IDENTIFIER  shift, and go to state 22
    '}'         shift, and go to state 23
    '-'         shift, and go to state 24
    '+'         shift, and go to state 25


state 20

   13 railt: '{' IDENTIFIER '}' .

    $default  reduce using rule 13 (railt)


state 21

   15 raili: '{' NUMBER '}' @2 . '{' rules '}'

    '{'  shift, and go to state 26


state 22

   12 options: options IDENTIFIER .

    $default  reduce using rule 12 (options)


state 23

    8 railp: '{' @1 options '}' .

    $default  reduce using rule 8 (railp)


state 24

   10 options: options '-' .

    $default  reduce using rule 10 (options)


state 25

   11 options: options '+' .

    $default  reduce using rule 11 (options)


state 26

   15 raili: '{' NUMBER '}' @2 '{' . rules '}'

    error       shift, and go to state 27
    IDENTIFIER  shift, and go to state 28
    ANNOT       shift, and go to state 29
    RAILCR      shift, and go to state 30
    STRING      shift, and go to state 31
    '('         shift, and go to state 32

    '}'  reduce using rule 43 (empty)
    ';'  reduce using rule 43 (empty)
    '|'  reduce using rule 43 (empty)

    rules   go to state 33
    rule    go to state 34
    body    go to state 35
    body0   go to state 36
    body1   go to state 37
    body2e  go to state 38
    body2   go to state 39
    body3   go to state 40
    body4   go to state 41
    empty   go to state 42


state 27

   19 rules: error .

    $default  reduce using rule 19 (rules)


state 28

   21 rule: IDENTIFIER . ':' @3 body
   41 body4: IDENTIFIER . annot

    ANNOT  shift, and go to state 43
    ':'    shift, and go to state 44

    $default  reduce using rule 45 (annot)

    annot  go to state 45


state 29

   26 body0: ANNOT . body1

    IDENTIFIER  shift, and go to state 46
    RAILCR      shift, and go to state 30
    STRING      shift, and go to state 31
    '('         shift, and go to state 32

    $default  reduce using rule 43 (empty)

    body1   go to state 47
    body2e  go to state 38
    body2   go to state 39
    body3   go to state 40
    body4   go to state 41
    empty   go to state 42


state 30

   42 body4: RAILCR .

    $default  reduce using rule 42 (body4)


state 31

   40 body4: STRING . annot

    ANNOT  shift, and go to state 43

    $default  reduce using rule 45 (annot)

    annot  go to state 48


state 32

   39 body4: '(' . body0 ')'

    IDENTIFIER  shift, and go to state 46
    ANNOT       shift, and go to state 29
    RAILCR      shift, and go to state 30
    STRING      shift, and go to state 31
    '('         shift, and go to state 32

    $default  reduce using rule 43 (empty)

    body0   go to state 49
    body1   go to state 37
    body2e  go to state 38
    body2   go to state 39
    body3   go to state 40
    body4   go to state 41
    empty   go to state 42


state 33

   15 raili: '{' NUMBER '}' @2 '{' rules . '}'
   16 rules: rules . ';' rule
   17      | rules . ';'

    '}'  shift, and go to state 50
    ';'  shift, and go to state 51


state 34

   18 rules: rule .

    $default  reduce using rule 18 (rules)


state 35

   22 rule: body .

    $default  reduce using rule 22 (rule)


state 36

   23 body: body0 .
   24 body0: body0 . '|' ANNOT body1
   25      | body0 . '|' body1

    '|'  shift, and go to state 52

    $default  reduce using rule 23 (body)


state 37

   27 body0: body1 .

    $default  reduce using rule 27 (body0)


state 38

   30 body1: body2e .

    $default  reduce using rule 30 (body1)


state 39

   28 body1: body2 . '*' body4e
   29      | body2 . '+' body4e
   31 body2e: body2 .
   33 body2: body2 . body3

    IDENTIFIER  shift, and go to state 46
    RAILCR      shift, and go to state 30
    STRING      shift, and go to state 31
    '+'         shift, and go to state 53
    '*'         shift, and go to state 54
    '('         shift, and go to state 32

    $default  reduce using rule 31 (body2e)

    body3  go to state 55
    body4  go to state 41


state 40

   34 body2: body3 .

    $default  reduce using rule 34 (body2)


state 41

   35 body3: body4 . '?'
   36      | body4 .

    '?'  shift, and go to state 56

    $default  reduce using rule 36 (body3)


state 42

   32 body2e: empty .

    $default  reduce using rule 32 (body2e)


state 43

   44 annot: ANNOT .

    $default  reduce using rule 44 (annot)


state 44

   21 rule: IDENTIFIER ':' . @3 body

    $default  reduce using rule 20 (@3)

    @3  go to state 57


state 45

   41 body4: IDENTIFIER annot .

    $default  reduce using rule 41 (body4)


state 46

   41 body4: IDENTIFIER . annot

    ANNOT  shift, and go to state 43

    $default  reduce using rule 45 (annot)

    annot  go to state 45


state 47

   26 body0: ANNOT body1 .

    $default  reduce using rule 26 (body0)


state 48

   40 body4: STRING annot .

    $default  reduce using rule 40 (body4)


state 49

   24 body0: body0 . '|' ANNOT body1
   25      | body0 . '|' body1
   39 body4: '(' body0 . ')'

    '|'  shift, and go to state 52
    ')'  shift, and go to state 58


state 50

   15 raili: '{' NUMBER '}' @2 '{' rules '}' .

    $default  reduce using rule 15 (raili)


state 51

   16 rules: rules ';' . rule
   17      | rules ';' .

    IDENTIFIER  shift, and go to state 28
    ANNOT       shift, and go to state 29
    RAILCR      shift, and go to state 30
    STRING      shift, and go to state 31
    '('         shift, and go to state 32

    '}'       reduce using rule 17 (rules)
    '}'       [reduce using rule 43 (empty)]
    ';'       reduce using rule 17 (rules)
    ';'       [reduce using rule 43 (empty)]
    '|'       reduce using rule 43 (empty)
    $default  reduce using rule 17 (rules)

    rule    go to state 59
    body    go to state 35
    body0   go to state 36
    body1   go to state 37
    body2e  go to state 38
    body2   go to state 39
    body3   go to state 40
    body4   go to state 41
    empty   go to state 42


state 52

   24 body0: body0 '|' . ANNOT body1
   25      | body0 '|' . body1

    IDENTIFIER  shift, and go to state 46
    ANNOT       shift, and go to state 60
    RAILCR      shift, and go to state 30
    STRING      shift, and go to state 31
    '('         shift, and go to state 32

    $default  reduce using rule 43 (empty)

    body1   go to state 61
    body2e  go to state 38
    body2   go to state 39
    body3   go to state 40
    body4   go to state 41
    empty   go to state 42


state 53

   29 body1: body2 '+' . body4e

    IDENTIFIER  shift, and go to state 46
    RAILCR      shift, and go to state 30
    STRING      shift, and go to state 31
    '('         shift, and go to state 32

    $default  reduce using rule 43 (empty)

    body4e  go to state 62
    body4   go to state 63
    empty   go to state 64


state 54

   28 body1: body2 '*' . body4e

    IDENTIFIER  shift, and go to state 46
    RAILCR      shift, and go to state 30
    STRING      shift, and go to state 31
    '('         shift, and go to state 32

    $default  reduce using rule 43 (empty)

    body4e  go to state 65
    body4   go to state 63
    empty   go to state 64


state 55

   33 body2: body2 body3 .

    $default  reduce using rule 33 (body2)


state 56

   35 body3: body4 '?' .

    $default  reduce using rule 35 (body3)


state 57

   21 rule: IDENTIFIER ':' @3 . body

    IDENTIFIER  shift, and go to state 46
    ANNOT       shift, and go to state 29
    RAILCR      shift, and go to state 30
    STRING      shift, and go to state 31
    '('         shift, and go to state 32

    $default  reduce using rule 43 (empty)

    body    go to state 66
    body0   go to state 36
    body1   go to state 37
    body2e  go to state 38
    body2   go to state 39
    body3   go to state 40
    body4   go to state 41
    empty   go to state 42


state 58

   39 body4: '(' body0 ')' .

    $default  reduce using rule 39 (body4)


state 59

   16 rules: rules ';' rule .

    $default  reduce using rule 16 (rules)


state 60

   24 body0: body0 '|' ANNOT . body1

    IDENTIFIER  shift, and go to state 46
    RAILCR      shift, and go to state 30
    STRING      shift, and go to state 31
    '('         shift, and go to state 32

    $default  reduce using rule 43 (empty)

    body1   go to state 67
    body2e  go to state 38
    body2   go to state 39
    body3   go to state 40
    body4   go to state 41
    empty   go to state 42


state 61

   25 body0: body0 '|' body1 .

    $default  reduce using rule 25 (body0)


state 62

   29 body1: body2 '+' body4e .

    $default  reduce using rule 29 (body1)


state 63

   37 body4e: body4 .

    $default  reduce using rule 37 (body4e)


state 64

   38 body4e: empty .

    $default  reduce using rule 38 (body4e)


state 65

   28 body1: body2 '*' body4e .

    $default  reduce using rule 28 (body1)


state 66

   21 rule: IDENTIFIER ':' @3 body .

    $default  reduce using rule 21 (rule)


state 67

   24 body0: body0 '|' ANNOT body1 .

    $default  reduce using rule 24 (body0)
